--- a/src/components/Modals/RetailerCardModal/styles.module.css
+++ b/src/components/Modals/RetailerCardModal/styles.module.css
@@ -68,6 +68,7 @@
     gap: 4px;
     top: 16px;
     left: 20px;
+    padding: 0;
     background: none;
     border: none;
     cursor: pointer;
